--- a/contact.html
+++ b/contact.html
@@ -3,46 +3,58 @@
 <head>
     <!-- <meta charset="utf-8" /> -->
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
-    <title>Yanan</title>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
-    <!-- <script src="main.js"></script> -->
+    <title>Yanan's Contact</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
 <body>
-    <div>
-        Yanan Meng
-    <div>
-        <a href="link">About</a>
-        <a href="link">Porfolio</a>
-        <a href="link">Contact</a>
+    <div class="Header">
+        <div class="HeaderLeft">
+            <h1>Yanan Meng</h1>
+        </div>
+        <div class="HeaderRight">
+            <div class="table">
+                <table>
+                    <tr>
+                        <td><a href="link">About</a></td>
+                        <td class="portfolio"><a href="link">Porfolio</a></td>
+                        <td><a href="link">Contact</a></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
     </div>
-    <div>
-        Contact
+
+    <div class="content">
+        <div class="ContentTitle">
+            <h1>Contact</h1>
+        </div>
+
+        <p>
+            Name
+        </p>
+        <div>
+            <input class="TextBox" type="text" name="Name" placeholder="John Smith">
+        </div>
+        <p>
+            Email
+        </p>
+        <div>
+            <input class="TextBox" type="email" name="Email" placeholder="example@gmail.com">
+        </div>
+        <p>
+            Message
+        </p>
+        <div>
+            <input class="TextBox Message" type="text" name "Message">
+        </div>
+        <div>
+            <input id="SubmitButton" type="submit" value="Submit">
+        </div>
     </div>
-    <br>
-    <div>
-        Name
+    <div class="copyrightbanner">
+        <div class="copyright">Copyright ©</div>
     </div>
-    <div>
-        entry box with default "John Smith"
-    </div>
-    <div>
-        Email
-    </div>
-    <div>
-        entry box with default "example@gmail.com"
-    </div>
-    <div>
-        Message
-    </div>
-    <div>
-        entry box with blank default
-    </div>
-    <div>
-        Submit button
-    </div>
-    <div>
-        Copyright (c)
-    </div>
+
 </body>
 </html>
