finished portfolio, updated index, contact, style

--- a/contact.html
+++ b/contact.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- <meta charset="utf-8" /> -->
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>Yanan's Contact</title>
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
 </head>
+
 <body>
-    <div class="Header">
-        <div class="HeaderLeft">
-            <h1>Yanan Meng</h1>
-        </div>
-        <div class="HeaderRight">
-            <div class="table">
-                <table>
-                    <tr>
-                        <td><a href="link">About</a></td>
-                        <td class="portfolio"><a href="link">Porfolio</a></td>
-                        <td><a href="link">Contact</a></td>
-                    </tr>
-                </table>
+    <div class="Banner">
+        <div class="Header">
+            <div class="HeaderLeft">
+                <div class="HeaderText">Yanan Meng</div>
+            </div>
+            <div class="HeaderRight">
+                <div class="table">
+                    <table>
+                        <tr>
+                            <td class="About"><a href="link">About</a></td>
+                            <td class="Portfolio"><a href="link">Porfolio</a></td>
+                            <td class="Contact"><a href="#">Contact</a></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
@@ -30,28 +31,26 @@
             <h1>Contact</h1>
         </div>
 
-        <p>
-            Name
-        </p>
+        <div class="TextBoxTitle">Name</div>
         <div>
             <input class="TextBox" type="text" name="Name" placeholder="John Smith">
         </div>
-        <p>
-            Email
-        </p>
+
+        <div class="TextBoxTitle">Email</div>
         <div>
             <input class="TextBox" type="email" name="Email" placeholder="example@gmail.com">
         </div>
-        <p>
-            Message
-        </p>
+
+        <div class="TextBoxTitle">Message</div>
         <div>
             <input class="TextBox Message" type="text" name "Message">
         </div>
+
         <div>
             <input id="SubmitButton" type="submit" value="Submit">
         </div>
     </div>
+
     <div class="copyrightbanner">
         <div class="copyright">Copyright ©</div>
     </div>
