--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- <meta charset="utf-8" /> -->
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
     <title>Yanan's About Me</title>
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <!-- <script src="main.js"></script> -->
-    <style>
-        
-    </style>
 </head>
+
 <body>
-    <div class="Header">
-        <div class="HeaderLeft">
-            <h1>Yanan Meng</h1>
-        </div>
-        <div class="HeaderRight">
-            <div class="table">
-                <table>
-                    <tr>
-                        <td><a href="link">About</a></td>
-                        <td class="portfolio"><a href="link">Porfolio</a></td>
-                        <td><a href="link">Contact</a></td>
-                    </tr>
-                </table>
+    <div class="Banner">
+        <div class="Header">
+            <div class="HeaderLeft">
+                <div class="HeaderText">Yanan Meng</div>
+            </div>
+            <div class="HeaderRight">
+                <div class="table">
+                    <table>
+                        <tr>
+                            <td class="About"><a href="#">About</a></td>
+                            <td class="Portfolio"><a href="link">Porfolio</a></td>
+                            <td class="Contact"><a href="link">Contact</a></td>
+                        </tr>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
