fixed errors after validation

--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
+    <meta charset="UTF-8">
     <title>Yanan's Contact</title>
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -16,8 +17,8 @@
                 <div class="table">
                     <table>
                         <tr>
-                            <td class="About"><a href="link">About</a></td>
-                            <td class="Portfolio"><a href="link">Porfolio</a></td>
+                            <td class="About"><a href="https://yanananan.github.io/Basic-Portfolio/index.html">About</a></td>
+                            <td class="Portfolio"><a href="https://yanananan.github.io/Basic-Portfolio/portfolio.html">Porfolio</a></td>
                             <td class="Contact"><a href="#">Contact</a></td>
                         </tr>
                     </table>
@@ -43,7 +44,7 @@
 
         <div class="TextBoxTitle">Message</div>
         <div>
-            <input class="TextBox Message" type="text" name "Message">
+            <input class="TextBox Message" type="text" name="Message">
         </div>
 
         <div>
