--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
+    <meta charset="UTF-8">
     <title>Yanan's About Me</title>
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -17,8 +18,8 @@
                     <table>
                         <tr>
                             <td class="About"><a href="#">About</a></td>
-                            <td class="Portfolio"><a href="link">Porfolio</a></td>
-                            <td class="Contact"><a href="link">Contact</a></td>
+                            <td class="Portfolio"><a href="https://yanananan.github.io/Basic-Portfolio/portfolio.html">Porfolio</a></td>
+                            <td class="Contact"><a href="https://yanananan.github.io/Basic-Portfolio/contact.html">Contact</a></td>
                         </tr>
                     </table>
                 </div>
@@ -31,7 +32,7 @@
             <h1>About Me</h1>
         </div>
         <div>
-            <img id="profilepic" src="assets\images\headpic.jpg" alt="Profile_Pic"></div>
+            <img id="profilepic" src="https://yanananan.github.io/Basic-Portfolio/assets/images/headpic.jpg" alt="Profile_Pic"></div>
         <div>
             <p>
                 I might empty my bank account, and buy that "Boy with a Pipe". Buy that "Boy with a Pipe". I might, I might empty my bank account, and buy that "Boy with a Pipe". Buy that "Boy with a Pipe". I might.
