--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-us">
 <head>
+    <meta charset="UTF-8">
     <title>Yanan's Contact</title>
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -16,9 +17,9 @@
                 <div class="table">
                     <table>
                         <tr>
-                            <td class="About"><a href="link">About</a></td>
+                            <td class="About"><a href="https://yanananan.github.io/Basic-Portfolio/index.html">About</a></td>
                             <td class="Portfolio"><a href="#">Porfolio</a></td>
-                            <td class="Contact"><a href="link">Contact</a></td>
+                            <td class="Contact"><a href="https://yanananan.github.io/Basic-Portfolio/contact.html">Contact</a></td>
                         </tr>
                     </table>
                 </div>
