--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
         <div class="TextBoxTitle">Message</div>
         <div>
-            <input class="TextBox Message" type="text" name="Message">
+            <textarea class="TextBox" rows="20"></textarea>
         </div>
 
         <div>
