fixed spacing between content and footer, final touch up before submission

--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,8 @@
         <div>
             <input id="SubmitButton" type="submit" value="Submit">
         </div>
+
+        <div class="blankbanner"></div>    
     </div>
 
     <div class="copyrightbanner">
