--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
             <p>
                 All this jewelry ain't no use when it's this dark. It's my favorite part, we see the lights, they got so far. It went too fast, we couldn't reach it with our arms. Wrist on a wrist, a link of charms. Laying, we're still a link apart. It's like we could die here all young, like we could dye hair all blonde. If we could see in twenty twin. Twice we could see it 'til the end.
             </p>
+            <p>Nah, I'd never spend millions on a painting.  I just love the song, that's all ;)</p>
         </div>
+        <div class="blankbanner"></div>    
     </div>
     <div class="copyrightbanner">
         <div class="copyright">Copyright ©</div>
